Bug 539949. Keep trying to scroll content into view even if it is clipped out. r=roc a=blocking-final+